# llms-for-ts

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml  requirements.txt  setup.py
docs/: Makefile  conf.py  index.rst  make.bat
experiments/: baseline.yml  bigbird.yml  finish_phi3.yml  llama-chat.yml  llama-instruct.yml  llama-no-chat.yml  llama.yml  mixtral.yml  phi3-chat.yml  phi3-no-chat.yml  phi3.yml  phi3_w_chat.yml  phi3_wo_chat.yml  test_datasets.yml  univariate.sh  univariate_benchmark.yml
experiments/new/: baseline.yml  etth1-phi3.yml  glm.yml  llama-no-chat.yml  phi3-chat.yml  phi3-no-chat.yml
experiments/tests/: test_m5.yml  test_models.yml
notebooks/: 1_data_processing.ipynb  2_models.ipynb  3_test.ipynb  4_compute_obs_len.ipynb  5_examine_results.ipynb  6_plotting.ipynb
src/: __init__.py  benchmark_run.py  run_baseline.py
src/data/: make_dataset.py
src/evaluation/: __init__.py  utils.py
src/features/: __init__.py  build_features.py  datasets.py  utils.py
src/models/: baselines.py  models.py  predict_model.py
src/prompt/: __init__.py  base.j2  base_llm.j2  base_llm_phi3.j2  metadata.j2  utils.py
src/visualization/: visualize.py
