[tool.poetry]
name = "llms-for-ts"
version = "0.1.0"
description = "Undergraduate thesis repository to evaluate the usage of LLMs as zero-shot time series forecasting models."
authors = ["VittorioRossi <rossi.vittori@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
